# secure-ledger

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cdb2a80e301_init_schema.py  edd936176def_add_sync_cursor_last_synced_at_to_plaid_.py
backend/app/: config.py  db.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  account.py  base.py  plaid_item.py  transaction.py  user.py
backend/app/routers/: accounts.py  auth.py  plaid.py  transactions.py
backend/app/schemas/: account.py  auth.py  plaid.py  transaction.py
backend/app/services/: crypto_service.py  plaid_service.py  sync_service.py
backend/tests/: conftest.py  test_auth.py  test_health.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AccountsSection.tsx  Layout.tsx  PlaidLinkButton.tsx  SpendingChart.tsx  TransactionsList.tsx
frontend/src/lib/: api.ts  auth.tsx  format.ts  sync.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx
