[project]
name = "secureledger-backend"
version = "0.1.0"
description = "SecureLedger backend — security-first financial aggregator"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=23.0.0",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.2.0",
  "cryptography>=43.0.0",
  "redis>=5.2.0",
  "plaid-python>=22.0.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "types-python-jose",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
